
  - Improved the message display in the web interface.

  - Improved the ELog HTML styling.

  - Added a "debug" keyword-only argument to "Simulate()" that prints a
    traceback on exception.

  - Added "obsreadings" parameter to generic axis to use instead of the
    hardcoded 100 times when asking observers for the current value.

**Release 2.1.2**

  - Fixed not being able to run another manualscan after stopping a
    manualscan.

  - Fixed error in "history()" when calling with actual timestamps.

  - Fixed glitches in cache handling of expired values when restarting
    the cache server.

  - The cache now re-loads database keys from disk even if not restarted
    on the same day.

  - Fixed problem with cache history query not returning all requested
    values.

**Release 2.1.1 (2012-03-22)**

  - Fixed an elog bug that caused elog to quit on Unicode errors.

  - Fixed calling "gauss()" and "poly()" with column names.

  - Report simulated runtime for code run with "Simulate()".

  - Fixed namespaces used in "Run()", so that globals can be accessed from
    functions defined in user scripts.

  - Fixed simulating and timing devices with a ramp parameter.

  - Made the cache robust against corrupted save files on disk.

  - Fixed the "create_nicosconf" script when no TACO environment is found.

  - Fixed a bug in simulation mode that would cause exceptions when
    wait()ing for fixed devices.

**Release 2.1.0 (2012-03-14)**

  - Introduced the "Measurable.duringMeasureHook()" and
    "Measurable.save()/doSave()" methods.

  - Added "Experiment.scripts" parameter that stores the code of the
    currently executed script.

  - Added easy access control using the "requires()" decorator.  Added
    "AccessError" and "Session.checkAccess()" APIs.

  - Added the three-parameter form of "adjust()" that allows to adjust to
    some other than the current position.

  - Added automatic retry of Taco calls with the new "tacotries" parameter